Adjust makefiles and code to make use of S130

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -1,7 +1,11 @@
 TARGET_CHIP := NRF51822_QFAA_CA
 BOARD := BOARD_NRF6310
 ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_NRF6310
+#CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_NRF6310
+
+EXTRAFLAGS = "-Os"
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS310_STACK -DS130 -DBOARD_NRF6310
+CFLAGS += $(EXTRAFLAGS)
 
 DEVICESERIES := nrf51
 
@@ -24,13 +28,15 @@ C_SOURCE_FILES += $(SDK_PATH)Source/ble/softdevice_handler.c
 
 INCLUDEPATHS += -I"$(SDK_PATH)Include/ble"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/app_common"
-INCLUDEPATHS += -I"$(SDK_PATH)Include/s110"
+#INCLUDEPATHS += -I"$(SDK_PATH)Include/s110"
+INCLUDEPATHS += -I"/opt/softdevices/s130_nrf51822_0.5.0-1.alpha_API/include/"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/sd_common"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/ble/ble_services"
 INCLUDEPATHS += -I"../include/ble_transport"
 INCLUDEPATHS += -I"../include"
 INCLUDEPATHS += -I"../"
-SDK_PATH = ../../../../../
+
+SDK_PATH = /opt/nrf51_sdk/v6/nrf51822/
 
 LINKER_SCRIPT = gcc_$(DEVICESERIES)_bootloader_$(DEVICE_VARIANT).ld
 OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
@@ -38,7 +44,8 @@ OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
 DEVICE_VARIANT := xxaa
 #DEVICE_VARIANT := xxab
 
-USE_SOFTDEVICE := S110
+#USE_SOFTDEVICE := S110
 #USE_SOFTDEVICE := S210
+USE_SOFTDEVICE := S130
 
 include $(SDK_PATH)Source/templates/gcc/Makefile.common
