--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -1,17 +1,29 @@
 TARGET_CHIP := NRF51822_QFAA_CA
 BOARD := BOARD_NRF6310
-ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
+#ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
 #CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_NRF6310
 
-EXTRAFLAGS = "-Os"
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS310_STACK -DS130 -DBOARD_NRF6310
-CFLAGS += $(EXTRAFLAGS)
+#EXTRAFLAGS = "-Os"
+SOFTDEVICE_FLAGS=-DS310_STACK -DS130
+#SOFTDEVICE_FLAGS=-DS110
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD $(SOFTDEVICE_FLAGS) -DBOARD_NRF6310
+#CFLAGS += -DBOOTLOADER_BANKED -DS310_STACK -DS130 -DBOARD_NRF6310
+#CLFAGS += -DEPD_ENABLE_EXTRA_RAM
+CFLAGS += -Os -flto -ffunction-sections -fdata-sections -fno-builtin
+#CFLAGS += $(EXTRAFLAGS)
+
+LDFLAGS = --specs=nano.specs -lc -lnosys -Wl,--gc-sections
 
 DEVICESERIES := nrf51
+
+SDK_PATH = /opt/nrf51_sdk/v6/nrf51822/
+
+OUTPUT_FILENAME=dobots
 
 C_SOURCE_FILES += main.c
 C_SOURCE_FILES += dfu_dual_bank.c
 C_SOURCE_FILES += dfu_transport_ble.c
+C_SOURCE_FILES += serial.c
 C_SOURCE_FILES += bootloader.c
 C_SOURCE_FILES += bootloader_util_gcc.c
 C_SOURCE_FILES += $(SDK_PATH)Source/ble/ble_services/ble_dfu.c
@@ -29,6 +41,7 @@ C_SOURCE_FILES += $(SDK_PATH)Source/ble/softdevice_handler.c
 INCLUDEPATHS += -I"$(SDK_PATH)Include/ble"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/app_common"
 #INCLUDEPATHS += -I"$(SDK_PATH)Include/s110"
+#INCLUDEPATHS += -I"/opt/softdevices/s110_nrf51822_7.0.0_API/include/"
 INCLUDEPATHS += -I"/opt/softdevices/s130_nrf51822_0.5.0-1.alpha_API/include/"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/sd_common"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/ble/ble_services"
@@ -36,16 +49,14 @@ INCLUDEPATHS += -I"../include/ble_transport"
 INCLUDEPATHS += -I"../include"
 INCLUDEPATHS += -I"../"
 
-SDK_PATH = /opt/nrf51_sdk/v6/nrf51822/
-
-LINKER_SCRIPT = gcc_$(DEVICESERIES)_bootloader_$(DEVICE_VARIANT).ld
-OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
-
 DEVICE_VARIANT := xxaa
 #DEVICE_VARIANT := xxab
 
 #USE_SOFTDEVICE := S110
 #USE_SOFTDEVICE := S210
 USE_SOFTDEVICE := S130
+
+LINKER_SCRIPT = gcc_$(DEVICESERIES)_bootloader_$(DEVICE_VARIANT).ld
+OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
 
 include $(SDK_PATH)Source/templates/gcc/Makefile.common
