Explain more in README

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -3,16 +3,18 @@ BOARD := BOARD_NRF6310
 #ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
 #CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_NRF6310
 
-#EXTRAFLAGS = "-Os"
 SOFTDEVICE_FLAGS=-DS310_STACK -DS130
 #SOFTDEVICE_FLAGS=-DS110
+MEMORY_LIMITATIONS=-D__STACK_SIZE=1024 -D__HEAP_SIZE=1024
+
 CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD $(SOFTDEVICE_FLAGS) -DBOARD_NRF6310
 #CFLAGS += -DBOOTLOADER_BANKED -DS310_STACK -DS130 -DBOARD_NRF6310
 #CLFAGS += -DEPD_ENABLE_EXTRA_RAM
 CFLAGS += -Os -flto -ffunction-sections -fdata-sections -fno-builtin
-#CFLAGS += $(EXTRAFLAGS)
 
 LDFLAGS = --specs=nano.specs -lc -lnosys -Wl,--gc-sections
+
+ASMFLAGS = $(MEMORY_LIMITATIONS)
 
 DEVICESERIES := nrf51
 
