Update Makefile for S110

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -5,6 +5,10 @@ CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD 
 
 DEVICESERIES := nrf51
 
+SDK_PATH = /opt/nrf51_sdk/v6/nrf51822/
+
+OUTPUT_FILENAME=dobots
+
 C_SOURCE_FILES += main.c
 C_SOURCE_FILES += dfu_dual_bank.c
 C_SOURCE_FILES += dfu_transport_ble.c
@@ -24,21 +28,22 @@ C_SOURCE_FILES += $(SDK_PATH)Source/ble/softdevice_handler.c
 
 INCLUDEPATHS += -I"$(SDK_PATH)Include/ble"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/app_common"
-INCLUDEPATHS += -I"$(SDK_PATH)Include/s110"
+INCLUDEPATHS += -I"/opt/softdevices/s110_nrf51822_7.0.0_API/include/"
+#INCLUDEPATHS += -I"/opt/softdevices/s130_nrf51822_0.5.0-1.alpha_API/include/"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/sd_common"
 INCLUDEPATHS += -I"$(SDK_PATH)Include/ble/ble_services"
 INCLUDEPATHS += -I"../include/ble_transport"
 INCLUDEPATHS += -I"../include"
 INCLUDEPATHS += -I"../"
-SDK_PATH = ../../../../../
-
-LINKER_SCRIPT = gcc_$(DEVICESERIES)_bootloader_$(DEVICE_VARIANT).ld
-OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
 
 DEVICE_VARIANT := xxaa
 #DEVICE_VARIANT := xxab
 
 USE_SOFTDEVICE := S110
 #USE_SOFTDEVICE := S210
+#USE_SOFTDEVICE := S130
+
+LINKER_SCRIPT = gcc_$(DEVICESERIES)_bootloader_$(DEVICE_VARIANT).ld
+OUTPUT_FILENAME := $(OUTPUT_FILENAME)_bootloader_$(DEVICE_VARIANT)
 
 include $(SDK_PATH)Source/templates/gcc/Makefile.common
