Add BOARD=X option

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -1,7 +1,16 @@
 TARGET_CHIP := NRF51822_QFAA_CA
 BOARD := BOARD_NRF6310
 ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_NRF6310
+
+#define PCA10001             0
+#define NRF6310              1
+#define NRF51822_DONGLE      2
+#define NRF51822_EVKIT       3
+#define RFDUINO              4
+#define CROWNSTONE           5
+#define NRF51422             6
+
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS110 -DBOARD_NRF6310 -DBOARD=5
 
 DEVICESERIES := nrf51
 
