--- a/nrf51822_v6.0.0 - GCC_Bootloader/Source/templates/gcc/Makefile.posix
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Source/templates/gcc/Makefile.posix
@@ -1,4 +1,6 @@
-GNU_INSTALL_ROOT := /usr/local/gcc-arm-none-eabi-4_8-2014q1
-GNU_VERSION := 4.8.3
-GNU_PREFIX := arm-none-eabi
+#GNU_INSTALL_ROOT := /usr/local/gcc-arm-none-eabi-4_8-2014q1
+#GNU_VERSION := 4.8.3
+#GNU_PREFIX := arm-none-eabi
 
+GNU_INSTALL_ROOT := $(COMPILER_PATH)
+GNU_PREFIX := $(COMPILER_TYPE)
