changed to bluenet_config_dir

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -1,5 +1,5 @@
 # Retrieve config settings
-include $(CROWNSTONE_DIR)/CMakeBuild.config
+include $(BLUENET_CONFIG_DIR)/CMakeBuild.config
 
 #define PCA10001             0
 #define NRF6310              1
