Working for S110 as well as S130

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -11,6 +11,10 @@ include $(BLUENET_DIR)/CMakeBuild.config
 
 CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES) -DBOARD_NRF6310 -DBOARD=5
 
+ifeq ($(SOFTDEVICE_SERIES),130)
+	CFLAGS += -DS310_STACK
+endif
+
 TARGET_CHIP := NRF51822_QFAA_CA
 BOARD := BOARD_NRF6310
 ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
