1. Add goto script. 2. Use board parameter in CMakeBuild.config and emit error if not defined

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -9,7 +9,11 @@ include $(BLUENET_DIR)/CMakeBuild.config
 #define CROWNSTONE           5
 #define NRF51422             6
 
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES) -DBOARD_NRF6310 -DBOARD=5
+ifndef BOARD
+$(error BOARD is not set. Check BLUENET_DIR/CMakeBuild.config)
+endif
+
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES) -DBOARD_NRF6310 -DBOARD=$(BOARD)
 
 ifeq ($(SOFTDEVICE_SERIES),130)
 	CFLAGS += -DS310_STACK
