removed boards_h replaced LED_x by PIN_GPIO_LEDx

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -13,7 +13,7 @@ endif
 CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES)
 
 # Required by Nordic specific files
-CFLAGS += -DBOARD_NRF6310
+# CFLAGS += -DBOARD_NRF6310
 
 # Required for writing to proper gpio pins
 CFLAGS += -DHARDWARE_BOARD=$(HARDWARE_BOARD)
@@ -25,7 +25,8 @@ ifeq ($(SOFTDEVICE_SERIES),130)
 endif
 
 TARGET_CHIP := NRF51822_QFAA_CA
-BOARD := BOARD_NRF6310
+# BOARD := BOARD_NRF6310
+BOARD := DUMMY
 ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
 
 DEVICESERIES := nrf51
