--- a/nrf51822_v6.0.0 - GCC_Bootloader/Source/templates/gcc/Makefile.common
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Source/templates/gcc/Makefile.common
@@ -3,7 +3,8 @@ DEVICESERIES := nrf51
 
 SDK_INCLUDE_PATH = $(SDK_PATH)/Include/
 SDK_SOURCE_PATH = $(SDK_PATH)/Source/
-TEMPLATE_PATH += $(SDK_SOURCE_PATH)/templates/gcc/
+#TEMPLATE_PATH += $(SDK_SOURCE_PATH)/templates/gcc/
+TEMPLATE_PATH += $(SDK_PATH)/components/toolchain/gcc/
 OUTPUT_BINARY_DIRECTORY := _build
 
 ifeq ($(OS),Windows_NT)
@@ -33,16 +34,16 @@ endif
 CPU := cortex-m0
 
 # Toolchain commands
-CC       		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-gcc"
-AS       		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-as"
-AR       		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-ar" -r
-LD       		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-ld"
-NM       		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-nm"
-OBJDUMP  		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-objdump"
-OBJCOPY  		:= "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-objcopy"
+CC       := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-gcc"
+AS       := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-as"
+AR       := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-ar" -r
+LD       := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-ld"
+NM       := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-nm"
+OBJDUMP  := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-objdump"
+OBJCOPY  := "$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-objcopy"
 
-MK 				:= mkdir
-RM 				:= rm -rf
+MK       := mkdir
+RM       := rm -rf
 
 OBJECT_DIRECTORY := _build
 LISTING_DIRECTORY := _build
@@ -80,10 +81,22 @@ C_SOURCE_FILENAMES = $(notdir $(C_SOURCE_FILES) )
 ASSEMBLER_SOURCE_FILENAMES = $(notdir $(ASSEMBLER_SOURCE_FILES) )
 
 # Make a list of source paths
-C_SOURCE_PATHS += ../ $(SDK_SOURCE_PATH) $(TEMPLATE_PATH) $(wildcard $(SDK_SOURCE_PATH)*/)  $(wildcard $(SDK_SOURCE_PATH)ext_sensors/*/) $(wildcard $(SDK_SOURCE_PATH)ble/*/)
-ASSEMBLER_SOURCE_PATHS = ../ $(SDK_SOURCE_PATH) $(TEMPLATE_PATH) $(wildcard $(SDK_SOURCE_PATH)*/)
+#C_SOURCE_PATHS += ../ $(SDK_SOURCE_PATH) $(TEMPLATE_PATH) $(wildcard $(SDK_SOURCE_PATH)*/)  $(wildcard $(SDK_SOURCE_PATH)ext_sensors/*/) $(wildcard $(SDK_SOURCE_PATH)ble/*/)
+C_SOURCE_PATHS += ../ $(wildcard $(SDK_PATH)/components/*) $(TEMPLATE_PATH)
+C_SOURCE_PATHS += $(wildcard $(SDK_PATH)/components/ble/*)
+C_SOURCE_PATHS += $(wildcard $(SDK_PATH)/components/ble/ble_services/*)
+C_SOURCE_PATHS += $(wildcard $(SDK_PATH)/components/drivers_nrf/*)
+C_SOURCE_PATHS += $(wildcard $(SDK_PATH)/components/libraries/*)
+C_SOURCE_PATHS += $(wildcard $(SDK_PATH)/components/softdevice/common/*)
+
+#ASSEMBLER_SOURCE_PATHS = ../ $(SDK_SOURCE_PATH) $(TEMPLATE_PATH) $(wildcard $(SDK_SOURCE_PATH)*/)
+ASSEMBLER_SOURCE_PATHS = ../ $(wildcard $(SDK_PATH)/components/*) $(TEMPLATE_PATH)
+ASSEMBLER_SOURCE_PATHS += $(wildcard $(SDK_PATH)/components/toolchain/*)
+
 
 C_OBJECTS = $(addprefix $(OBJECT_DIRECTORY)/, $(C_SOURCE_FILENAMES:.c=.o) )
+$(info C_OBJECTS=${C_OBJECTS})
+$(info C_SOURCE_PATHS=${C_SOURCE_PATHS})
 ASSEMBLER_OBJECTS = $(addprefix $(OBJECT_DIRECTORY)/, $(ASSEMBLER_SOURCE_FILENAMES:.s=.o) )
 
 # Set source lookup paths
