--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -10,10 +10,16 @@ ifndef HARDWARE_BOARD
 $(error HARDWARE_BOARD is not set. Check BLUENET_CONFIG_DIR/CMakeBuild.config)
 endif
 
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES)
+#CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES)
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD
 
 # Required by Nordic specific files
 # CFLAGS += -DBOARD_NRF6310
+
+CFLAGS += -DSOFTDEVICE_SERIES=$(SOFTDEVICE_SERIES)
+CFLAGS += -DSOFTDEVICE_MAJOR=$(SOFTDEVICE_MAJOR)
+CFLAGS += -DSOFTDEVICE_MINOR=$(SOFTDEVICE_MINOR)
+CFLAGS += -DAPPLICATION_START_ADDRESS=$(APPLICATION_START_ADDRESS)
 
 # Required for writing to proper gpio pins
 CFLAGS += -DHARDWARE_BOARD=$(HARDWARE_BOARD)
@@ -27,7 +33,11 @@ CFLAGS += -DHARDWARE_VERSION=$(HARDWARE_VERSION)
 TARGET_CHIP := NRF51822_QFAA_CA
 # BOARD := BOARD_NRF6310
 BOARD := DUMMY
-ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
+#ASMFLAGS += -D__HEAP_SIZE=16 -D__STACK_SIZE=2048
+#ASMFLAGS += -D__HEAP_SIZE=2048 -D__STACK_SIZE=2048
+ASMFLAGS += -D__HEAP_SIZE=0 -D__STACK_SIZE=2048
+
+#MEMORY_LIMITATIONS=-D__STACK_SIZE=1024 -D__HEAP_SIZE=1024
 
 DEVICESERIES := nrf51
 
@@ -41,27 +51,41 @@ C_SOURCE_FILES += dfu_transport_ble.c
 C_SOURCE_FILES += serial.c
 C_SOURCE_FILES += bootloader.c
 C_SOURCE_FILES += bootloader_util_gcc.c
+C_SOURCE_FILES += dfu_init.c
+
+#C_SOURCE_FILES += $(SDK_PATH)components/libraries/bootloader_dfu/dfu_dual_bank.c
+#C_SOURCE_FILES += $(SDK_PATH)components/libraries/bootloader_dfu/dfu_transport_ble.c
+#C_SOURCE_FILES += $(SDK_PATH)components/libraries/bootloader_dfu/bootloader.c
+#C_SOURCE_FILES += $(SDK_PATH)components/libraries/bootloader_dfu/bootloader_util_gcc.c
+
 
 C_SOURCE_FILES += $(SDK_PATH)components/ble/common/ble_conn_params.c
 C_SOURCE_FILES += $(SDK_PATH)components/ble/common/ble_advdata.c
 #C_SOURCE_FILES += $(SDK_PATH)components/ble/common/ble_srv_common.c
 C_SOURCE_FILES += $(SDK_PATH)components/ble/ble_services/ble_dfu/ble_dfu.c
+#C_SOURCE_FILES += $(SDK_PATH)components/ble/ble_debug_assert_handler/ble_debug_assert_handler.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/timer/app_timer.c
+C_SOURCE_FILES += $(SDK_PATH)components/libraries/timer/app_timer_appsh.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/scheduler/app_scheduler.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/gpiote/app_gpiote.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/hci/hci_mem_pool.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/crc16/crc16.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/util/app_util_platform.c
-C_SOURCE_FILES += $(SDK_PATH)components/drivers_nrf/pstorage/pstorage.c
+C_SOURCE_FILES += $(SDK_PATH)components/libraries/util/app_error.c
+#C_SOURCE_FILES += $(SDK_PATH)components/drivers_nrf/pstorage/pstorage.c
+C_SOURCE_FILES += $(SDK_PATH)components/drivers_nrf/pstorage/pstorage_raw.c
 C_SOURCE_FILES += $(SDK_PATH)components/softdevice/common/softdevice_handler/softdevice_handler.c
+C_SOURCE_FILES += $(SDK_PATH)components/softdevice/common/softdevice_handler/softdevice_handler_appsh.c
+C_SOURCE_FILES += $(SDK_PATH)components/drivers_nrf/nrf_delay.c
 
 
 
 INCLUDEPATHS += -I"$(SDK_PATH)components"
 INCLUDEPATHS += -I"$(SDK_PATH)components/sdk"
 INCLUDEPATHS += -I"$(SDK_PATH)components/ble/common"
-INCLUDEPATHS += -I"$(SDK_PATH)components/ble/ble_debug_assert_handler"
+#INCLUDEPATHS += -I"$(SDK_PATH)components/ble/ble_debug_assert_handler"
 INCLUDEPATHS += -I"$(SDK_PATH)components/ble/ble_services/ble_dfu"
+#INCLUDEPATHS += -I"$(SDK_PATH)components/ble/ble_error_log"
 INCLUDEPATHS += -I"$(SDK_PATH)components/app_common"
 INCLUDEPATHS += -I"$(SDK_PATH)components/device"
 INCLUDEPATHS += -I"$(SDK_PATH)components/toolchain"
