Now works for S110

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -21,6 +21,9 @@ CFLAGS += -DSOFTDEVICE_MAJOR=$(SOFTDEVICE_MAJOR)
 CFLAGS += -DSOFTDEVICE_MINOR=$(SOFTDEVICE_MINOR)
 CFLAGS += -DAPPLICATION_START_ADDRESS=$(APPLICATION_START_ADDRESS)
 
+# For the ble_debug_assert_handler
+CFLAGS += -DBSP_DEFINES_ONLY -DBSP_SIMPLE
+
 # Required for writing to proper gpio pins
 CFLAGS += -DHARDWARE_BOARD=$(HARDWARE_BOARD)
 CFLAGS += -DHARDWARE_VERSION=$(HARDWARE_VERSION)
@@ -47,6 +50,7 @@ OUTPUT_FILENAME=dobots
 
 C_SOURCE_FILES += main.c
 C_SOURCE_FILES += dfu_dual_bank.c
+#C_SOURCE_FILES += dfu_single_bank.c
 C_SOURCE_FILES += dfu_transport_ble.c
 C_SOURCE_FILES += serial.c
 C_SOURCE_FILES += bootloader.c
