Use config file settings

--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/Makefile
@@ -10,16 +10,20 @@ ifndef HARDWARE_BOARD
 $(error HARDWARE_BOARD is not set. Check BLUENET_CONFIG_DIR/CMakeBuild.config)
 endif
 
-#CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES)
-CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD
+CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD -DS$(SOFTDEVICE_SERIES)
+#CFLAGS += -DBLE_STACK_SUPPORT_REQD -DBOOTLOADER_BANKED -DBLE_STACK_SUPPORT_REQD
 
 # Required by Nordic specific files
 # CFLAGS += -DBOARD_NRF6310
 
+# Defines from the config file
 CFLAGS += -DSOFTDEVICE_SERIES=$(SOFTDEVICE_SERIES)
 CFLAGS += -DSOFTDEVICE_MAJOR=$(SOFTDEVICE_MAJOR)
 CFLAGS += -DSOFTDEVICE_MINOR=$(SOFTDEVICE_MINOR)
 CFLAGS += -DAPPLICATION_START_ADDRESS=$(APPLICATION_START_ADDRESS)
+CFLAGS += -DBOOTLOADER_START_ADDRESS=$(BOOTLOADER_START_ADDRESS)
+CFLAGS += -DAPP_DATA_RESERVED=$(APP_DATA_RESERVED)
+CFLAGS += -DSERIAL_VERBOSITY=$(SERIAL_VERBOSITY)
 
 # For the ble_debug_assert_handler
 CFLAGS += -DBSP_DEFINES_ONLY -DBSP_SIMPLE
@@ -27,11 +31,6 @@ CFLAGS += -DBSP_DEFINES_ONLY -DBSP_SIMPLE
 # Required for writing to proper gpio pins
 CFLAGS += -DHARDWARE_BOARD=$(HARDWARE_BOARD)
 CFLAGS += -DHARDWARE_VERSION=$(HARDWARE_VERSION)
-
-# Required to address the softdevice properly
-#ifeq ($(SOFTDEVICE_SERIES),130)
-#	CFLAGS += -DS310_STACK
-#endif
 
 TARGET_CHIP := NRF51822_QFAA_CA
 # BOARD := BOARD_NRF6310
@@ -49,8 +48,8 @@ SDK_PATH=$(NRF51822_DIR)/
 OUTPUT_FILENAME=dobots
 
 C_SOURCE_FILES += main.c
-C_SOURCE_FILES += dfu_dual_bank.c
-#C_SOURCE_FILES += dfu_single_bank.c
+#C_SOURCE_FILES += dfu_dual_bank.c
+C_SOURCE_FILES += dfu_single_bank.c
 C_SOURCE_FILES += dfu_transport_ble.c
 C_SOURCE_FILES += serial.c
 C_SOURCE_FILES += bootloader.c
