--- a/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/gcc_nrf51_bootloader_xxaa.ld.in
+++ b/nrf51822_v6.0.0 - GCC_Bootloader/Board/nrf6310/device_firmware_updates/bootloader - gcc - BLE/gcc/gcc_nrf51_bootloader_xxaa.ld.in
@@ -4,8 +4,8 @@ GROUP(-lgcc -lc -lnosys)
 
 MEMORY
 {
-	FLASH (rx) : ORIGIN = 0x00038000, LENGTH = 32K
-	RAM (rwx) : ORIGIN = 0x20002000, LENGTH = 8K
+	FLASH (rx) : ORIGIN = @BOOTLOADER_START_ADDRESS@, LENGTH = @BOOTLOADER_LENGTH@
+	RAM (rwx) : ORIGIN = @RAM_R1_BASE@, LENGTH = @RAM_APPLICATION_AMOUNT@
 
 	BOOTLOADER_SETTINGS (rw) : ORIGIN = 0x0003FC00, LENGTH = 1K
 }
