Compiles for nrf52, sdk11, s132

--- a/gcc/Makefile.common
+++ b/gcc/Makefile.common
@@ -1,5 +1,7 @@
-DEVICE := NRF51
-DEVICESERIES := nrf51
+#DEVICE := NRF51
+#DEVICESERIES := nrf51
+DEVICE := NRF52
+DEVICESERIES := nrf52
 
 SDK_INCLUDE_PATH = $(SDK_PATH)/Include/
 SDK_SOURCE_PATH = $(SDK_PATH)/Source/
