--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -45,7 +45,7 @@ CFLAGS += -DBSP_DEFINES_ONLY -DBSP_SIMPLE
 CFLAGS += -DHARDWARE_BOARD=$(HARDWARE_BOARD)
 CFLAGS += -DHARDWARE_VERSION=$(HARDWARE_VERSION)
 
-SDK_PATH=/home/vliedel/libs/nordic/nrf52_sdk/v11_0/
+SDK_PATH=$(NRF51822_DIR)/
 
 
 PROJECT_NAME := dfu_dual_bank_ble_s132_pca10036
@@ -90,15 +90,15 @@ C_SOURCE_FILES += main.c
 C_SOURCE_FILES += bootloader.c
 C_SOURCE_FILES += bootloader_settings.c
 C_SOURCE_FILES += bootloader_util.c
-#C_SOURCE_FILES += dfu_dual_bank.c
-C_SOURCE_FILES += dfu_single_bank.c
+C_SOURCE_FILES += dfu_dual_bank.c
+#C_SOURCE_FILES += dfu_single_bank.c
 C_SOURCE_FILES += dfu_init.c
 C_SOURCE_FILES += dfu_transport_ble.c
 #C_SOURCE_FILES += dfu_transport_serial.c
 C_SOURCE_FILES += serial.c
 
 #C_SOURCE_FILES += $(SDK_PATH)components/libraries/util/app_error.c
-C_SOURCE_FILES += $(SDK_PATH)components/libraries/util/app_error_weak.c
+#C_SOURCE_FILES += $(SDK_PATH)components/libraries/util/app_error_weak.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/scheduler/app_scheduler.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/timer/app_timer.c
 C_SOURCE_FILES += $(SDK_PATH)components/libraries/timer/app_timer_appsh.c
@@ -170,59 +170,30 @@ OUTPUT_BINARY_DIRECTORY = $(OBJECT_DIRECTORY)
 # Sorting removes duplicates
 BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LISTING_DIRECTORY) )
 
-#flags for the 10036 board
-CFLAGS += -DNRF52_PAN_16
-CFLAGS += -DNRF52_PAN_23
+
 CFLAGS += -DNRF52
-CFLAGS += -DNRF52_PAN_4
-CFLAGS += -DNRF52_PAN_7
-CFLAGS += -DNRF52_PAN_1
-CFLAGS += -DNRF52_PAN_3
-CFLAGS += -DNRF52_PAN_2
-CFLAGS += -DSOFTDEVICE_PRESENT
-CFLAGS += -DNRF52_PAN_9
-CFLAGS += -DNRF52_PAN_8
-CFLAGS += -DNRF52_PAN_11
-CFLAGS += -DNRF52_PAN_64
-CFLAGS += -DNRF52_PAN_39
-CFLAGS += -DNRF52_PAN_38
+#CFLAGS += -DBOARD_PCA10040
+CFLAGS += -DNRF52_PAN_12
 CFLAGS += -DNRF52_PAN_15
 CFLAGS += -DNRF52_PAN_58
-CFLAGS += -DNRF52_PAN_17
-CFLAGS += -DNRF52_PAN_65
-CFLAGS += -DNRF52_PAN_33
-CFLAGS += -DNRF52_PAN_32
+CFLAGS += -DNRF52_PAN_55
+CFLAGS += -DNRF52_PAN_54
+CFLAGS += -DNRF52_PAN_31
 CFLAGS += -DNRF52_PAN_30
-CFLAGS += -DNRF52_PAN_37
+CFLAGS += -DNRF52_PAN_51
 CFLAGS += -DNRF52_PAN_36
-CFLAGS += -DNRF52_PAN_35
-CFLAGS += -DNRF52_PAN_34
+CFLAGS += -DNRF52_PAN_53
 CFLAGS += -D__HEAP_SIZE=0
-CFLAGS += -DNRF52_PAN_10
 CFLAGS += -DS132
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
-CFLAGS += -DNRF52_PAN_12
 CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -DBSP_DEFINES_ONLY
-CFLAGS += -DNRF52_PAN_28
-CFLAGS += -DNRF52_PAN_29
 CFLAGS += -DSWI_DISABLE0
 CFLAGS += -DNRF52_PAN_20
-CFLAGS += -DBOARD_PCA10036
-CFLAGS += -DNRF52_PAN_24
-CFLAGS += -DNRF52_PAN_25
-CFLAGS += -DNRF52_PAN_26
-CFLAGS += -DNRF52_PAN_27
-CFLAGS += -DNRF52_PAN_42
-CFLAGS += -DNRF52_PAN_43
-CFLAGS += -DNRF52_PAN_40
-CFLAGS += -DNRF52_PAN_41
-CFLAGS += -DNRF52_PAN_46
-CFLAGS += -DNRF52_PAN_47
-CFLAGS += -DNRF52_PAN_44
+CFLAGS += -DNRF52_PAN_64
+CFLAGS += -DSOFTDEVICE_PRESENT
+CFLAGS += -DNRF52_PAN_62
 CFLAGS += -DNRF52_PAN_63
-CFLAGS += -DNRF52_PAN_48
-CFLAGS += -DNRF52_PAN_49
 CFLAGS += -mcpu=cortex-m4
 CFLAGS += -mthumb -mabi=aapcs --std=gnu99
 CFLAGS += -Wall -Werror -Os -g3
@@ -240,60 +211,163 @@ LDFLAGS += -Wl,--gc-sections
 # use newlib in nano version
 LDFLAGS += --specs=nano.specs -lc -lnosys
 
-# Assembler flags
+# Assembler flags for the pca10040 board
 ASMFLAGS += -x assembler-with-cpp
-ASMFLAGS += -DNRF52_PAN_16
-ASMFLAGS += -DNRF52_PAN_23
 ASMFLAGS += -DNRF52
-ASMFLAGS += -DNRF52_PAN_4
-ASMFLAGS += -DNRF52_PAN_7
-ASMFLAGS += -DNRF52_PAN_1
-ASMFLAGS += -DNRF52_PAN_3
-ASMFLAGS += -DNRF52_PAN_2
-ASMFLAGS += -DSOFTDEVICE_PRESENT
-ASMFLAGS += -DNRF52_PAN_9
-ASMFLAGS += -DNRF52_PAN_8
-ASMFLAGS += -DNRF52_PAN_11
-ASMFLAGS += -DNRF52_PAN_64
-ASMFLAGS += -DNRF52_PAN_39
-ASMFLAGS += -DNRF52_PAN_38
+#ASMFLAGS += -DBOARD_PCA10040
+ASMFLAGS += -DNRF52_PAN_12
 ASMFLAGS += -DNRF52_PAN_15
 ASMFLAGS += -DNRF52_PAN_58
-ASMFLAGS += -DNRF52_PAN_17
-ASMFLAGS += -DNRF52_PAN_65
-ASMFLAGS += -DNRF52_PAN_33
-ASMFLAGS += -DNRF52_PAN_32
+ASMFLAGS += -DNRF52_PAN_55
+ASMFLAGS += -DNRF52_PAN_54
+ASMFLAGS += -DNRF52_PAN_31
 ASMFLAGS += -DNRF52_PAN_30
-ASMFLAGS += -DNRF52_PAN_37
+ASMFLAGS += -DNRF52_PAN_51
 ASMFLAGS += -DNRF52_PAN_36
-ASMFLAGS += -DNRF52_PAN_35
-ASMFLAGS += -DNRF52_PAN_34
+ASMFLAGS += -DNRF52_PAN_53
 ASMFLAGS += -D__HEAP_SIZE=0
-ASMFLAGS += -DNRF52_PAN_10
 ASMFLAGS += -DS132
 ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
-ASMFLAGS += -DNRF52_PAN_12
 ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
 ASMFLAGS += -DBSP_DEFINES_ONLY
-ASMFLAGS += -DNRF52_PAN_28
-ASMFLAGS += -DNRF52_PAN_29
 ASMFLAGS += -DSWI_DISABLE0
 ASMFLAGS += -DNRF52_PAN_20
-ASMFLAGS += -DBOARD_PCA10036
-ASMFLAGS += -DNRF52_PAN_24
-ASMFLAGS += -DNRF52_PAN_25
-ASMFLAGS += -DNRF52_PAN_26
-ASMFLAGS += -DNRF52_PAN_27
-ASMFLAGS += -DNRF52_PAN_42
-ASMFLAGS += -DNRF52_PAN_43
-ASMFLAGS += -DNRF52_PAN_40
-ASMFLAGS += -DNRF52_PAN_41
-ASMFLAGS += -DNRF52_PAN_46
-ASMFLAGS += -DNRF52_PAN_47
-ASMFLAGS += -DNRF52_PAN_44
+ASMFLAGS += -DNRF52_PAN_64
+ASMFLAGS += -DSOFTDEVICE_PRESENT
+ASMFLAGS += -DNRF52_PAN_62
 ASMFLAGS += -DNRF52_PAN_63
-ASMFLAGS += -DNRF52_PAN_48
-ASMFLAGS += -DNRF52_PAN_49
+
+
+##flags for the 10036 board
+#CFLAGS += -DNRF52_PAN_16
+#CFLAGS += -DNRF52_PAN_23
+#CFLAGS += -DNRF52
+#CFLAGS += -DNRF52_PAN_4
+#CFLAGS += -DNRF52_PAN_7
+#CFLAGS += -DNRF52_PAN_1
+#CFLAGS += -DNRF52_PAN_3
+#CFLAGS += -DNRF52_PAN_2
+#CFLAGS += -DSOFTDEVICE_PRESENT
+#CFLAGS += -DNRF52_PAN_9
+#CFLAGS += -DNRF52_PAN_8
+#CFLAGS += -DNRF52_PAN_11
+#CFLAGS += -DNRF52_PAN_64
+#CFLAGS += -DNRF52_PAN_39
+#CFLAGS += -DNRF52_PAN_38
+#CFLAGS += -DNRF52_PAN_15
+#CFLAGS += -DNRF52_PAN_58
+#CFLAGS += -DNRF52_PAN_17
+#CFLAGS += -DNRF52_PAN_65
+#CFLAGS += -DNRF52_PAN_33
+#CFLAGS += -DNRF52_PAN_32
+#CFLAGS += -DNRF52_PAN_30
+#CFLAGS += -DNRF52_PAN_37
+#CFLAGS += -DNRF52_PAN_36
+#CFLAGS += -DNRF52_PAN_35
+#CFLAGS += -DNRF52_PAN_34
+#CFLAGS += -D__HEAP_SIZE=0
+#CFLAGS += -DNRF52_PAN_10
+#CFLAGS += -DS132
+#CFLAGS += -DCONFIG_GPIO_AS_PINRESET
+#CFLAGS += -DNRF52_PAN_12
+#CFLAGS += -DBLE_STACK_SUPPORT_REQD
+#CFLAGS += -DBSP_DEFINES_ONLY
+#CFLAGS += -DNRF52_PAN_28
+#CFLAGS += -DNRF52_PAN_29
+#CFLAGS += -DSWI_DISABLE0
+#CFLAGS += -DNRF52_PAN_20
+#CFLAGS += -DBOARD_PCA10036
+#CFLAGS += -DNRF52_PAN_24
+#CFLAGS += -DNRF52_PAN_25
+#CFLAGS += -DNRF52_PAN_26
+#CFLAGS += -DNRF52_PAN_27
+#CFLAGS += -DNRF52_PAN_42
+#CFLAGS += -DNRF52_PAN_43
+#CFLAGS += -DNRF52_PAN_40
+#CFLAGS += -DNRF52_PAN_41
+#CFLAGS += -DNRF52_PAN_46
+#CFLAGS += -DNRF52_PAN_47
+#CFLAGS += -DNRF52_PAN_44
+#CFLAGS += -DNRF52_PAN_63
+#CFLAGS += -DNRF52_PAN_48
+#CFLAGS += -DNRF52_PAN_49
+#CFLAGS += -mcpu=cortex-m4
+#CFLAGS += -mthumb -mabi=aapcs --std=gnu99
+#CFLAGS += -Wall -Werror
+#CFLAGS += -Os -g3
+##CFLAGS += -DDEBUG -g3 -O0
+##CFLAGS += -DDEBUG -g3 -Os
+
+#CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
+## keep every function in separate section. This will allow linker to dump unused functions
+#CFLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
+#CFLAGS += -fno-builtin --short-enums 
+## keep every function in separate section. This will allow linker to dump unused functions
+#LDFLAGS += -Xlinker -Map=$(LISTING_DIRECTORY)/$(OUTPUT_FILENAME).map
+#LDFLAGS += -mthumb -mabi=aapcs -L $(TEMPLATE_PATH) -T$(LINKER_SCRIPT)
+#LDFLAGS += -mcpu=cortex-m4
+#LDFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
+## let linker to dump unused sections
+#LDFLAGS += -Wl,--gc-sections
+## use newlib in nano version
+#LDFLAGS += --specs=nano.specs -lc -lnosys
+
+## Assembler flags for pca10036
+#ASMFLAGS += -x assembler-with-cpp
+#ASMFLAGS += -DNRF52_PAN_16
+#ASMFLAGS += -DNRF52_PAN_23
+#ASMFLAGS += -DNRF52
+#ASMFLAGS += -DNRF52_PAN_4
+#ASMFLAGS += -DNRF52_PAN_7
+#ASMFLAGS += -DNRF52_PAN_1
+#ASMFLAGS += -DNRF52_PAN_3
+#ASMFLAGS += -DNRF52_PAN_2
+#ASMFLAGS += -DSOFTDEVICE_PRESENT
+#ASMFLAGS += -DNRF52_PAN_9
+#ASMFLAGS += -DNRF52_PAN_8
+#ASMFLAGS += -DNRF52_PAN_11
+#ASMFLAGS += -DNRF52_PAN_64
+#ASMFLAGS += -DNRF52_PAN_39
+#ASMFLAGS += -DNRF52_PAN_38
+#ASMFLAGS += -DNRF52_PAN_15
+#ASMFLAGS += -DNRF52_PAN_58
+#ASMFLAGS += -DNRF52_PAN_17
+#ASMFLAGS += -DNRF52_PAN_65
+#ASMFLAGS += -DNRF52_PAN_33
+#ASMFLAGS += -DNRF52_PAN_32
+#ASMFLAGS += -DNRF52_PAN_30
+#ASMFLAGS += -DNRF52_PAN_37
+#ASMFLAGS += -DNRF52_PAN_36
+#ASMFLAGS += -DNRF52_PAN_35
+#ASMFLAGS += -DNRF52_PAN_34
+#ASMFLAGS += -D__HEAP_SIZE=0
+#ASMFLAGS += -DNRF52_PAN_10
+#ASMFLAGS += -DS132
+#ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
+#ASMFLAGS += -DNRF52_PAN_12
+#ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
+#ASMFLAGS += -DBSP_DEFINES_ONLY
+#ASMFLAGS += -DNRF52_PAN_28
+#ASMFLAGS += -DNRF52_PAN_29
+#ASMFLAGS += -DSWI_DISABLE0
+#ASMFLAGS += -DNRF52_PAN_20
+#ASMFLAGS += -DBOARD_PCA10036
+#ASMFLAGS += -DNRF52_PAN_24
+#ASMFLAGS += -DNRF52_PAN_25
+#ASMFLAGS += -DNRF52_PAN_26
+#ASMFLAGS += -DNRF52_PAN_27
+#ASMFLAGS += -DNRF52_PAN_42
+#ASMFLAGS += -DNRF52_PAN_43
+#ASMFLAGS += -DNRF52_PAN_40
+#ASMFLAGS += -DNRF52_PAN_41
+#ASMFLAGS += -DNRF52_PAN_46
+#ASMFLAGS += -DNRF52_PAN_47
+#ASMFLAGS += -DNRF52_PAN_44
+#ASMFLAGS += -DNRF52_PAN_63
+#ASMFLAGS += -DNRF52_PAN_48
+#ASMFLAGS += -DNRF52_PAN_49
+
+#ASMFLAGS += -DDEBUG -g3 -O0
 
 #default target - first one defined
 default: clean nrf52832_xxaa_s132
@@ -324,7 +398,8 @@ OBJECTS = $(C_OBJECTS) $(ASM_OBJECTS)
 
 nrf52832_xxaa_s132: OUTPUT_FILENAME := nrf52832_xxaa_s132
 #nrf52832_xxaa_s132: LINKER_SCRIPT=../../../dfu_gcc_nrf52.ld
-nrf52832_xxaa_s132: LINKER_SCRIPT=$(SDK_PATH)examples/dfu/bootloader/dfu_gcc_nrf52.ld
+#nrf52832_xxaa_s132: LINKER_SCRIPT=$(SDK_PATH)examples/dfu/bootloader/dfu_gcc_nrf52.ld
+nrf52832_xxaa_s132: LINKER_SCRIPT=dfu_gcc_nrf52.ld
 
 nrf52832_xxaa_s132: $(BUILD_DIRECTORIES) $(OBJECTS)
 	@echo Linking target: $(OUTPUT_FILENAME).out
