fixe for app reserved data (use value directly from BLUENET pstorage_platform.h) optional, let APP_DATA_RESERVED overwrite value (but allow only increased value)

--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -45,9 +45,13 @@ CFLAGS += -DSOFTDEVICE_MAJOR=$(SOFTDEVICE_MAJOR)
 CFLAGS += -DSOFTDEVICE_MINOR=$(SOFTDEVICE_MINOR)
 CFLAGS += -DAPPLICATION_START_ADDRESS=$(APPLICATION_START_ADDRESS)
 CFLAGS += -DBOOTLOADER_START_ADDRESS=$(BOOTLOADER_START_ADDRESS)
-CFLAGS += -DAPP_DATA_RESERVED=$(APP_DATA_RESERVED)
 CFLAGS += -DSERIAL_VERBOSITY=$(SERIAL_VERBOSITY)
 CFLAGS += -DDEVICE_TYPE=$(DEVICE_TYPE)
+
+# optinal APP_DATA_RESERVED
+ifdef APP_DATA_RESERVED
+CFLAGS += -DAPP_DATA_RESERVED=$(APP_DATA_RESERVED)
+endif
 
 # For the ble_debug_assert_handler
 CFLAGS += -DBSP_DEFINES_ONLY -DBSP_SIMPLE
